from dataIntegrator.LLMSuport.AiAgents.AIAgent import AIAgent

class DeepSeek(AIAgent):
    def inquiry(self, prompt: str, question: str):
        return "DeepSeek has not yet enabled"